// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create a failure action to load Home page 1`] = `
Object {
  "payload": Object {
    "err": [Error],
  },
  "type": "LOAD_HOME_PAGE_FAILURE",
}
`;

exports[`should create a failure action to load app process 1`] = `
Object {
  "payload": Object {
    "err": [Error],
  },
  "type": "LOAD_APP_PROCESS_FAILURE",
}
`;

exports[`should create a success action to load Home page 1`] = `
Object {
  "type": "LOAD_HOME_PAGE_SUCCESS",
}
`;

exports[`should create a success action to load app process 1`] = `
Object {
  "type": "LOAD_APP_PROCESS_SUCCESS",
}
`;

exports[`should create an action to load Home page 1`] = `
Object {
  "type": "LOAD_HOME_PAGE",
}
`;

exports[`should create an action to load app process 1`] = `
Object {
  "type": "LOAD_APP_PROCESS",
}
`;

exports[`should create an action to reset state 1`] = `
Object {
  "type": "RESET_PAGES_STATUS",
}
`;

exports[`should create an action to set a base-url 1`] = `
Object {
  "payload": Object {
    "baseUrl": "url",
  },
  "type": "SET_BASE_URL",
}
`;
